# QtProject

./: README.md
SystemTrayCMake/: CMakeLists.txt  README.md  SystemTray.cpp  SystemTray.h  aboutwindow.cpp  aboutwindow.h  aboutwindow.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resource.qrc
